# HelloRN

./: App.tsx  DeviceInfo.js  app.json  banner.tsx  bu_search.js  bundle.sh  common.js  detai.tsx  home.tsx  index.js  metro.bu.config.js  metro.common.config.js  package-lock.json  package.json  splash.tsx  video.tsx
__tests__/: App.test.tsx
android/: build.gradle  config.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: common.android.bundle  index.android.bundle
android/app/src/main/cpp/: CMakeLists.txt  CallbackObj.cpp  CallbackObj.h  DBWork.cpp  DBWork.h  DownloadTask.h  DownloadWorker.cpp  Qp.h  Student.cpp  Student.h  jni_tools.cpp
android/app/src/main/cpp/include/: DBWork.h  DownloadTask.h  DownloadWorker.h  MD5.h  Qp.h  QpInfo.h  ThreadPool.h  ZipTask.h  jni_tools.h
android/app/src/main/cpp/include/openssl/: configuration.h
android/app/src/main/cpp/include/zlib/: zipconf.h
android/app/src/main/cpp/src/: DBWork.cpp  DownloadWorker.cpp  MD5.cpp  ThreadPool.cpp  ZipTask.cpp  jni_tools.cpp
android/app/src/main/res/layout/: activity_welcome.xml
android/lib_network/: build.gradle
android/lib_network/src/main/: AndroidManifest.xml
android/lib_permission/: build.gradle
android/lib_permission/src/main/: AndroidManifest.xml
android/lib_permission/src/main/res/drawable/: common_confirm_dialog_bg.xml
android/lib_permission/src/main/res/layout/: include_permission_description.xml  permission_activity_sample.xml  permission_common_dialog_confirm.xml  permission_fragment_sample.xml  setting_permission_dialog_confirm.xml
android/lib_permission/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/lib_utils/: build.gradle
android/lib_utils/src/main/: AndroidManifest.xml
android/lib_xdf_network/: build.gradle
android/lib_xdf_network/src/main/: AndroidManifest.xml
android/lib_xdf_permission/: build.gradle
android/lib_xdf_permission/src/main/: AndroidManifest.xml
android/lib_xdf_permission/src/main/res/anim/: dialog_in.xml  (+1 more)
android/module_main/: build.gradle
android/module_main/src/main/: AndroidManifest.xml
app/actions/: actionTypes.js  index.js
app/api/: AppApi.ts
app/modules/search/: index.tsx
app/pages/: Appbars.tsx  banner.tsx  detai.tsx  home.tsx  homepage.tsx  login.tsx  more.tsx  splash.tsx
app/redux/: index.js
bundle/android/: common.android.bundle
bundle/android/all/: all.android.bundle
bundle/android/bu1/: bu1.android.bundle
bundle/android/bu2/: index.android.bundle
bundle/android/index/: index.android.bundle
bundle/android/search/: search.android.bundle
config/: bundleBuInfo.json  bundleCommonInfo.json  bundleIndexInfo.json
ios/: Podfile
ios/HelloRN/: AppDelegate.mm  Info.plist
ios/HelloRN.xcodeproj/: project.pbxproj
pages/: banner.tsx  home.tsx  homepage.tsx  login.tsx  more.tsx  splash.tsx  video.tsx
src/api/: AppApi.ts
src/mock/: movices.json
src/modules/home/pages/: Appbars.tsx  banner.tsx  detai.tsx  home.tsx  homepage.tsx  login.tsx  more.tsx  newscomponent.tsx  splash.tsx
src/modules/search/: index.tsx
src/pages/: Appbars.tsx  data.tsx  detai.tsx  homepage.tsx
src/utils/: NetworkManager.ts
(+175 files in other folders)
